fix(t): Style on disabled collapse

--- a/src/nz-zorro.scss
+++ b/src/nz-zorro.scss
@@ -5195,7 +5195,7 @@ nz-carousel {
     border-radius: 0 0 2px 2px;
 }
 .ant-collapse-borderless {
-    background-color: #fafafa;
+    background-color: $devui-base-bg;
     border: 0;
 }
 .ant-collapse-borderless > .ant-collapse-item {
@@ -5238,7 +5238,7 @@ nz-carousel {
 }
 .ant-collapse .ant-collapse-item-disabled > .ant-collapse-header,
 .ant-collapse .ant-collapse-item-disabled > .ant-collapse-header > .arrow {
-    color: rgba(0, 0, 0, 0.25);
+    color: $devui-text-weak;
     cursor: not-allowed;
 }
 .ant-collapse-rtl {
